--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
   </footer><!-- End Footer -->
 
   <!-- Whatsapp bottom -->
-  <link rel="stylesheet" href="../maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 
  
